# 2048.cpp

./: .gitignore  CMakeLists.txt  README.md  cli.cpp  run.sh
2048/: 2048_Game.cpp  board.cpp  board.hpp  cli.cpp  cli.hpp  game_session.cpp  game_session.hpp  gamelib.cpp  gamelib.h  main.cpp
Tower of Hanoi/: Tower_of_Hanoi_Game.cpp  Tower_of_Hanoi_Solution.cpp
data/: 2048.db
includes/: cli.hpp  game_session.hpp  ranking.hpp
src/: board.cpp  board.hpp  cli.cpp  game_session.cpp  game_session.hpp  main.cpp  ranking.cpp
src/engine/: board.cpp  game_session.cpp  game_settings.cpp  ranking.cpp
src/engine/includes/: board.hpp  game_session.hpp  game_settings.hpp  ranking.hpp
src/ui/: cli.cpp
src/ui/cli/: cli.cpp  game_screen.cpp  main_menu.cpp  menu.cpp  ranking_menu.cpp  ranking_screen.cpp  settings_menu.cpp  terminal.cpp
src/ui/cli/menus/: main_menu.cpp  settings_menu.cpp
src/ui/cli/screens/: game_screen.cpp  ranking_screen.cpp
src/ui/includes/: cli.hpp  game_screen.hpp  main_menu.hpp  menu.hpp  menu_base.hpp  quit_menu.hpp  ranking_menu.hpp  ranking_screen.hpp  screen_base.hpp  settings_menu.hpp  terminal.hpp
src/ui/includes/menus/: main_menu.hpp  menu_base.hpp  settings_menu.hpp
src/ui/includes/screens/: game_screen.hpp  quit_screen.hpp  ranking_screen.hpp
